<resources>
    <string name="app_name">我的音乐</string>
    <string name="user_name">用户名</string>
    <string name="my_music">我的音乐</string>
    <string name="user_password">密&#12288;码</string>
    <string name="user_phone">手机号</string>
    <string name="register_now">立即注册</string>
    <string name="login">登&#12288;录</string>
    <string name="confirm_password">请确认密码</string>
    <string name="register">注&#12288;册</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="center_user_name">用户名：</string>
    <string name="change_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="input_old_password">请输入原密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="confirm_new_password">请确认新密码</string>
    <string name="confirm_btn_title">确&#12288;定</string>
</resources>