<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <!--引入navBar-->
    <include layout="@layout/nav_bar"></include>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_main"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_size"
        />
    <!--引入自定义view-->
    <com.example.musicapplication.views.InputView
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_view_height"
        android:layout_marginTop="@dimen/margin_size"
        app:input_icon="@mipmap/input_phone"
        app:input_hint="@string/user_phone"
        app:is_password="false"
        />
    <View style="@style/SplitLine"/>
    <com.example.musicapplication.views.InputView
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_view_height"
        android:layout_marginTop="@dimen/margin_size"
        app:input_icon="@mipmap/input_password"
        app:input_hint="@string/user_password"
        app:is_password="true"
        />
    <View style="@style/SplitLine"/>

    <!--立即注册-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color"
        android:textSize="@dimen/info_size"
        android:text="@string/register_now"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/margin_size"
        android:onClick="toRegister"
        />
    <Button
        style="@style/CommitBtn"
        android:text="@string/login"
        android:layout_marginTop="@dimen/margin_size"
        />
</LinearLayout>