<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <include layout="@layout/nav_bar"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_size"
        android:src="@mipmap/ic_main_400" />
    <!--引入自定义view-->
    <com.example.musicapplication.views.InputView
        android:layout_width="match_parent"
        android:id="@+id/input_phone"
        android:layout_height="@dimen/input_view_height"
        android:layout_marginTop="@dimen/margin_size"
        app:input_icon="@mipmap/input_phone"
        app:input_hint="@string/please_input_phone"
        app:is_password="false"
        />
    <View
        style="@style/SplitLine"/>

    <com.example.musicapplication.views.InputView
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_view_height"
        android:id="@+id/input_password"
        app:input_icon="@mipmap/input_password"
        app:input_hint="@string/please_input_password"
        app:is_password="true"
        />
    <View
        style="@style/SplitLine"/>

    <com.example.musicapplication.views.InputView
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_view_height"
        android:id="@+id/confirm_input_password"
        app:input_icon="@mipmap/input_password"
        app:input_hint="@string/confirm_password"
        app:is_password="true"
        />

    <View
        style="@style/SplitLine"/>

    <Button
        style="@style/CommitBtn"
        android:text="@string/register"
        android:onClick="register"
        />

</LinearLayout>