<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity"
    android:orientation="vertical">

    <include layout="@layout/nav_bar"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_size"
        android:src="@mipmap/ic_main" />
    <!--引入自定义view-->
    <com.example.musicapplication.views.InputView
        android:layout_width="match_parent"
        android:id="@+id/input_old_pwd"
        android:layout_height="@dimen/input_view_height"
        android:layout_marginTop="@dimen/margin_size"
        app:input_icon="@mipmap/input_password"
        app:input_hint="@string/input_old_password"
        app:is_password="true"
        />
    <View
        style="@style/SplitLine"/>

    <com.example.musicapplication.views.InputView
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_view_height"
        android:id="@+id/input_new_password"
        app:input_icon="@mipmap/input_password"
        app:input_hint="@string/input_new_password"
        app:is_password="true"
        />
    <View
        style="@style/SplitLine"/>

    <com.example.musicapplication.views.InputView
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_view_height"
        android:id="@+id/input_password_again"
        app:input_icon="@mipmap/input_password"
        app:input_hint="@string/confirm_new_password"
        app:is_password="true"
        />

    <View
        style="@style/SplitLine"/>

    <Button
        style="@style/CommitBtn"
        android:text="@string/confirm_btn_title"
        android:onClick="changeNewPassword"
        />
</LinearLayout>